• Fixing some layout bugs from validation updates in previous commit

--- a/client/templates/layout/layout.css.styl
+++ b/client/templates/layout/layout.css.styl
@@ -40,6 +40,11 @@ a.carousel-control .fa
   margin-left 0
   margin-right 0
 
+
+.form-control-feedback
+  top 9px
+  right 12px
+
 .modal-body,
 .modal-body p
   line-height 1.4
